--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@vue/apollo-composable": "^4.0.2",
+    "@apollo/client": "^3.10.8",
     "firebase": "^10.12.2",
+    "graphql": "^16.9.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
